IDP-1494 - Login flow for proxied SAML authentication
https://issues.shibboleth.net/jira/browse/IDP-1494

Add in processing of Scoping element.
Add cross-protocol proxy count config control.
Add option to ignore request content for compatibility.
Rename some new properties for consistency.
Some misc. test changes.